@@ -2,16 +2,17 @@
 ExoToolbarsEditorDialog
 
 <!-- ##### SECTION Short_Description ##### -->
-
+Dialog to edit toolbars
 
 <!-- ##### SECTION Long_Description ##### -->
 <para>
-
+	Provides an easy-to-use wrapper for the #ExoToolbarsEditor
+	widget.
 </para>
 
 <!-- ##### SECTION See_Also ##### -->
 <para>
-
+	#ExoToolbarsEditor
 </para>
 
 <!-- ##### STRUCT ExoToolbarsEditorDialog ##### -->
