@@ -2,12 +2,20 @@
 ExoToolbarsEditor
 
 <!-- ##### SECTION Short_Description ##### -->
-
+Widget to edit toolbars
 
 <!-- ##### SECTION Long_Description ##### -->
 <para>
-
+	#ExoToolbarsEditor is a widget that allows the user to edit toolbars
+	used within your application by simply dragging and dropping toolbar
+	items between the editor widget and the toolbar widgets.
 </para>
+
+<para>
+	Most applications should simply use the #ExoToolbarsEditorDialog
+	class, which includes an #ExoToolbarsEditor as main widget.
+</para>
+
 
 <!-- ##### SECTION See_Also ##### -->
 <para>
