@@ -1,6 +1,6 @@
 /* $Id$ */
 /*-
- * Copyright (c) 2004       os-cillation e.K.
+ * Copyright (c) 2004-2005  os-cillation e.K.
  * Copyright (c) 2002,2004  Anders Carlsson <andersca@gnu.org>
  *
  * Written by Benedikt Meurer <benny@xfce.org>.
@@ -307,8 +307,6 @@ exo_icon_view_class_init (ExoIconViewClass *klass)
    * The ::selection-mode property specifies the selection mode of
    * icon view. If the mode is #GTK_SELECTION_MULTIPLE, rubberband selection
    * is enabled, for the other modes, only keyboard selection is possible.
-   *
-   * Since: 2.6
    */
   g_object_class_install_property (gobject_class,
                                    PROP_SELECTION_MODE,
@@ -326,8 +324,6 @@ exo_icon_view_class_init (ExoIconViewClass *klass)
    * containing the pixbufs which are displayed. The pixbuf column must be 
    * of type #GDK_TYPE_PIXBUF. Setting this property to -1 turns off the
    * display of pixbufs.
-   *
-   * Since: 2.6
    */
   g_object_class_install_property (gobject_class,
                                    PROP_PIXBUF_COLUMN,
@@ -344,8 +340,6 @@ exo_icon_view_class_init (ExoIconViewClass *klass)
    * containing the texts which are displayed. The text column must be 
    * of type #G_TYPE_STRING. If this property and the :markup-column 
    * property are both set to -1, no texts are displayed.   
-   *
-   * Since: 2.6
    */
   g_object_class_install_property (gobject_class,
                                    PROP_TEXT_COLUMN,
@@ -364,8 +358,6 @@ exo_icon_view_class_init (ExoIconViewClass *klass)
    * of type #G_TYPE_STRING. If this property and the :text-column property 
    * are both set to column numbers, it overrides the text column.
    * If both are set to -1, no texts are displayed.   
-   *
-   * Since: 2.6
    */
   g_object_class_install_property (gobject_class,
                                    PROP_MARKUP_COLUMN,
@@ -2825,8 +2817,6 @@ exo_icon_view_scroll_to_item (ExoIconView     *icon_view,
  * Creates a new #ExoIconView widget
  * 
  * Return value: A newly created #ExoIconView widget
- *
- * Since: 2.6
  **/
 GtkWidget *
 exo_icon_view_new (void)
@@ -2841,8 +2831,6 @@ exo_icon_view_new (void)
  * Creates a new #ExoIconView widget with the model @model.
  * 
  * Return value: A newly created #ExoIconView widget.
- *
- * Since: 2.6 
  **/
 GtkWidget *
 exo_icon_view_new_with_model (GtkTreeModel *model)
@@ -2861,8 +2849,6 @@ exo_icon_view_new_with_model (GtkTreeModel *model)
  * 
  * Return value: The #GtkTreePath corresponding to the icon or %NULL
  * if no icon exists at that position.
- *
- * Since: 2.6 
  **/
 GtkTreePath *
 exo_icon_view_get_path_at_pos (ExoIconView *icon_view,
@@ -2892,8 +2878,6 @@ exo_icon_view_get_path_at_pos (ExoIconView *icon_view,
  * 
  * Calls a function for each selected icon. Note that the model or
  * selection cannot be modified from within this function.
- *
- * Since: 2.6 
  **/
 void
 exo_icon_view_selected_foreach (ExoIconView           *icon_view,
@@ -2920,8 +2904,6 @@ exo_icon_view_selected_foreach (ExoIconView           *icon_view,
  * @mode: The selection mode
  * 
  * Sets the selection mode of the @icon_view.
- *
- * Since: 2.6 
  **/
 void
 exo_icon_view_set_selection_mode (ExoIconView      *icon_view,
@@ -2948,8 +2930,6 @@ exo_icon_view_set_selection_mode (ExoIconView      *icon_view,
  * Gets the selection mode of the @icon_view.
  *
  * Return value: the current selection mode
- *
- * Since: 2.6 
  **/
 GtkSelectionMode
 exo_icon_view_get_selection_mode (ExoIconView *icon_view)
@@ -2968,8 +2948,6 @@ exo_icon_view_get_selection_mode (ExoIconView *icon_view)
  * If the @icon_view already has a model set, it will remove 
  * it before setting the new model.  If @model is %NULL, then
  * it will unset the old model.
- *
- * Since: 2.6 
  **/
 void
 exo_icon_view_set_model (ExoIconView *icon_view,
@@ -3076,8 +3054,6 @@ exo_icon_view_set_model (ExoIconView *icon_view,
  * model is unset.
  *
  * Return value: A #GtkTreeModel, or %NULL if none is currently being used.
- *
- * Since: 2.6 
  **/
 GtkTreeModel *
 exo_icon_view_get_model (ExoIconView *icon_view)
@@ -3094,8 +3070,6 @@ exo_icon_view_get_model (ExoIconView *icon_view)
  * 
  * Sets the column with text for @icon_view to be @column. The text
  * column must be of type #G_TYPE_STRING.
- *
- * Since: 2.6 
  **/
 void
 exo_icon_view_set_text_column (ExoIconView *icon_view,
@@ -3133,8 +3107,6 @@ exo_icon_view_set_text_column (ExoIconView *icon_view,
  * Returns the column with text for @icon_view.
  *
  * Returns: the text column, or -1 if it's unset.
- *
- * Since: 2.6
  */
 gint
 exo_icon_view_get_text_column (ExoIconView  *icon_view)
@@ -3153,8 +3125,6 @@ exo_icon_view_get_text_column (ExoIconView  *icon_view)
  * @column. The markup column must be of type #G_TYPE_STRING.
  * If the markup column is set to something, it overrides
  * the text column set by exo_icon_view_set_text_column().
- *
- * Since: 2.6
  **/
 void
 exo_icon_view_set_markup_column (ExoIconView *icon_view,
@@ -3192,8 +3162,6 @@ exo_icon_view_set_markup_column (ExoIconView *icon_view,
  * Returns the column with markup text for @icon_view.
  *
  * Returns: the markup column, or -1 if it's unset.
- *
- * Since: 2.6
  */
 gint
 exo_icon_view_get_markup_column (ExoIconView  *icon_view)
@@ -3210,8 +3178,6 @@ exo_icon_view_get_markup_column (ExoIconView  *icon_view)
  * 
  * Sets the column with pixbufs for @icon_view to be @column. The pixbuf
  * column must be of type #GDK_TYPE_PIXBUF
- *
- * Since: 2.6 
  **/
 void
 exo_icon_view_set_pixbuf_column (ExoIconView *icon_view,
@@ -3250,8 +3216,6 @@ exo_icon_view_set_pixbuf_column (ExoIconView *icon_view,
  * Returns the column with pixbufs for @icon_view.
  *
  * Returns: the pixbuf column, or -1 if it's unset.
- *
- * Since: 2.6
  */
 gint
 exo_icon_view_get_pixbuf_column (ExoIconView  *icon_view)
@@ -3267,8 +3231,6 @@ exo_icon_view_get_pixbuf_column (ExoIconView  *icon_view)
  * @path: The #GtkTreePath to be selected.
  * 
  * Selects the row at @path.
- *
- * Since: 2.6
  **/
 void
 exo_icon_view_select_path (ExoIconView *icon_view,
@@ -3295,8 +3257,6 @@ exo_icon_view_select_path (ExoIconView *icon_view,
  * @path: The #GtkTreePath to be unselected.
  * 
  * Unselects the row at @path.
- *
- * Since: 2.6
  **/
 void
 exo_icon_view_unselect_path (ExoIconView *icon_view,
@@ -3333,8 +3293,6 @@ exo_icon_view_unselect_path (ExoIconView *icon_view,
  * </programlisting></informalexample>
  *
  * Return value: A #GList containing a #GtkTreePath for each selected row.
- *
- * Since: 2.6
  **/
 GList *
 exo_icon_view_get_selected_items (ExoIconView *icon_view)
@@ -3365,8 +3323,6 @@ exo_icon_view_get_selected_items (ExoIconView *icon_view)
  * 
  * Selects all the icons. @icon_view must has its selection mode set
  * to #GTK_SELECTION_MULTIPLE.
- *
- * Since: 2.6
  **/
 void
 exo_icon_view_select_all (ExoIconView *icon_view)
@@ -3400,8 +3356,6 @@ exo_icon_view_select_all (ExoIconView *icon_view)
  * @icon_view: A #ExoIconView.
  * 
  * Unselects all the icons.
- *
- * Since: 2.6
  **/
 void
 exo_icon_view_unselect_all (ExoIconView *icon_view)
@@ -3428,8 +3382,6 @@ exo_icon_view_unselect_all (ExoIconView *icon_view)
  * selected. If @icon does not point to a valid location, %FALSE is returned.
  * 
  * Return value: %TRUE if @path is selected.
- *
- * Since: 2.6
  **/
 gboolean
 exo_icon_view_path_is_selected (ExoIconView *icon_view,
@@ -3456,8 +3408,6 @@ exo_icon_view_path_is_selected (ExoIconView *icon_view,
  * @path: The #GtkTreePath to be activated
  * 
  * Activates the item determined by @path.
- *
- * Since: 2.6
  **/
 void
 exo_icon_view_item_activated (ExoIconView      *icon_view,
@@ -3476,8 +3426,6 @@ exo_icon_view_item_activated (ExoIconView      *icon_view,
  * 
  * Sets the ::orientation property which determines whether the labels 
  * are drawn beside the icons instead of below.
- *
- * Since: 2.6
  **/
 void 
 exo_icon_view_set_orientation (ExoIconView    *icon_view,
@@ -3504,8 +3452,6 @@ exo_icon_view_set_orientation (ExoIconView    *icon_view,
  * whether the labels are drawn beside the icons instead of below. 
  * 
  * Return value: the relative position of texts and icons 
- *
- * Since: 2.6
  **/
 GtkOrientation
 exo_icon_view_get_orientation (ExoIconView *icon_view)
