@@ -5,6 +5,7 @@
   ExoUri and ExoPropertyProxy.
 - The D-BUS dependency is gone.
 - Python bindings have been added.
+- Updated API documentation.
 - New translations: Dwayne Bailey (en_GB)
 
 
