@@ -1,3 +1,10 @@
+2005-02-25	Benedikt Meurer <benny@xfce.org>
+
+	* docs/reference/tmpl/exo-toolbars-editor-dialog.sgml,
+	  docs/reference/tmpl/exo-toolbars-editor.sgml, exo/exo-icon-view.c,
+	  exo/exo-toolbars-editor-dialog.c, exo/exo-toolbars-editor.c,
+	  exo/exo-toolbars-model.c, NEWS: Update the API reference manual.
+
 2005-02-24	Benedikt Meurer <benny@xfce.org>
 
 	* python/exo.override, python/exo.defs: Add Python bindings for
